Started to make screens use the screens module of Catalyst.